k8s/apps/internal/dev-environment/leaderboard-site/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: leaderboard-site
  namespace: dev-environment
  annotations:
    kubernetes.io/ingress.class: traefik-external
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-dev-ip-list@kubernetescrd
    gethomepage.dev/href: "https://leaderboard.dev.opryga.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Leaderboard Dev Site"
    gethomepage.dev/description: "Dev Leaderboard Site"
    gethomepage.dev/group: "Dev Environment"
    gethomepage.dev/icon: "php.png"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`leaderboard.dev.opryga.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: leaderboard-site
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
        - name: local-ip-list
          namespace: traefik
        # - name: oauth-forward-auth
        #   namespace: traefik
        # - name: oauth-headers
        #   namespace: traefik
        - name: crowdsec-bouncer
          namespace: traefik
  tls:
    secretName: dev-opryga-com-tls

---
# Authenticated requests to /oauth2/ will be forwarded to the oauth-proxy service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: oauth-proxy-path
  namespace: dev-environment
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure # or websecure for HTTPS
  routes:
    - match: Host(`leaderboard.dev.opryga.com`) && PathPrefix(`/oauth2/`) # Replace with your domain
      kind: Rule
      services:
        - name: oauth-proxy
          port: 4180
      middlewares:
        - name: crowdsec-bouncer
          namespace: traefik
  # Uncomment and configure for HTTPS
  tls:
    secretName: auth-opryga-com-tls

---
# add externalName service for oauth-proxy
apiVersion: v1
kind: Service
metadata:
  name: oauth-proxy
  namespace: dev-environment
spec:
  type: ExternalName
  externalName: oauth-proxy.ms-sso.svc.cluster.local
  ports:
    - name: http
      port: 4180
      targetPort: 4180
